Added Catalog.API container orchestration support

--- a/src/Services/Catalog/Catalog.API/Dockerfile
+++ b/src/Services/Catalog/Catalog.API/Dockerfile
@@ -17,7 +17,17 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "Catalog.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+RUN dotnet dev-certs https -ep /app/publish/aspnetapp.pfx -p password
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+USER root
+RUN chown $APP_UID:$APP_UID /app/aspnetapp.pfx && chmod 600 /app/aspnetapp.pfx
+USER $APP_UID
+
+ENV ASPNETCORE_Kestrel__Certificates__Default__Password=password
+ENV ASPNETCORE_Kestrel__Certificates__Default__Path=/app/aspnetapp.pfx
+
 ENTRYPOINT ["dotnet", "Catalog.API.dll"]
