--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,6 +1,12 @@
 ﻿services:
   catalogdb:
     image: postgres
+    
+  catalog.api:
+    image: catalog.api
+    build:
+      context: .
+      dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
 volumes:
   postgres_catalog:
