Developed Basket Features in CQRS Handler classes using BasketRepository

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,6 +1,8 @@
 ﻿services:
   catalogdb:
     image: postgres
+  basketdb:
+    image: postgres
     
   catalog.api:
     image: catalog.api
@@ -10,3 +12,4 @@
 
 volumes:
   postgres_catalog:
+  postgres_basket:
