--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": "Server=localhost;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres"
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5433;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true"
+  }
 }
   
